--- a/src/main/resources/static/css/general.css
+++ b/src/main/resources/static/css/general.css
@@ -20,6 +20,77 @@ input, button {
 body {
   margin: 0; }
 
+.select2-results__option{
+  color: #bbcae7 !important;
+}
+.select2-selection {
+  width: 506px;
+  border-radius: 0 !important;
+  border: 0 !important ;
+  padding: 30px;
+
+}
+.select2-selection.select2-selection--single{
+  height: 86px !important;
+  margin-bottom: 30px;
+}
+.select2-selection__arrow {
+  height: 26px;
+  position: absolute;
+  top: 33px !important;
+  right: 1px;
+  width: 20px;
+}
+.select2-dropdown.select2-dropdown--below{
+  font-family: 'Stolzl';
+  width: 508px !important;
+  position:relative;
+  top: -31px;
+}
+.select2-selection__rendered{
+  color: #bbcae7 !important;
+  padding-left: 0px  !important;
+}
+.select2-search__field{
+  display: none;
+}
+
+.popup{
+
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.7);
+  transition: opacity 500ms;
+  visibility: hidden;
+  opacity: 0;
+}
+.visible{
+  transition: opacity 500ms;
+  transition: .4s;
+  opacity: 1;
+  visibility: visible;
+}
+.agreement{
+  position: absolute;
+  top: 14%;
+  width: 70%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.agreement__container{
+  height: 500px;
+  overflow-y: scroll;
+  background-color: #dedede;
+}
+
+.agreement__contant{
+  border-radius: 10px;
+  padding: 20px;
+  font-family:'Stolzl Book';
+}
 .list {
   padding: 0;
   margin: 0; }
@@ -3883,3 +3954,104 @@ button {
   -webkit-transition: .9s;
   -o-transition: .9s;
   transition: .9s; }
+
+.radiobuttons__trader-false::after, .radiobuttons__investor-false::after {
+  display: block;
+  content: '';
+  width: 29px;
+  height: 29px;
+  border: 3px solid #4c61f2;
+  border-radius: 50%;
+  position: absolute;
+  top: -7px;
+  left: -47px;
+}
+
+.radiobuttons__trader-false--active::before {
+  display: block;
+  content: '';
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #4c61f2;
+  position: absolute;
+  left: -39px;
+  top: 0px;
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+}
+
+.radiobuttons__trader-false::after, .radiobuttons__investor-false::after {
+  display: block;
+  content: '';
+  width: 29px;
+  height: 29px;
+  border: 3px solid #4c61f2;
+  border-radius: 50%;
+  position: absolute;
+  top: -7px;
+  left: -46px;
+}
+
+.radiobuttons__acceptance-checkbox {
+  display: block;
+  content: '';
+  width: 29px;
+  height: 29px;
+  border: 3px solid #c3d0ea;
+  border-radius: 50%;
+  position: absolute;
+  top: -6px;
+  left: -47px;
+}
+
+.radiobuttons__acceptance--active::before {
+  display: block;
+  content: '';
+  width: 21px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #c3d0ea;
+  position: absolute;
+  top: 1px;
+  left: -40px;
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+}
+
+.account-existance-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.buttons-kit-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.buttons-kit {
+  flex-direction: column;
+  align-items: center;
+}
+
+.buttons-kit .button {
+  width: 100%;
+}
+
+.buttons-kit .button--photo {
+  margin-right: 0px;
+}
+
+.buttons-kit .button--sign-up {
+  margin-top: 10px;
+}
+
+.account-existance__sign-up {
+  margin-bottom: 100px;
+}
+
+.main {
+  padding-bottom: 300px;
+}
